# FirstJob

./: .gitignore  README.md  compose.yml  docker-compose.yml  pyproject.toml  requirements.txt
First_job.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
compose/django/: start
compose/nginx/: Dockerfile
core/: settings.py  urls.py
empresa/: admin.py  decorators.py  forms.py  models.py  urls.py  views.py
empresa/migrations/: 0001_initial.py  0002_initial.py  0003_alter_empresa_usuario.py  0004_remove_empresa_usuario.py  0005_empresa_usuario_alter_empresa_cnpj.py
templates/: base.html  index.html
templates/admin/: detalhar_empresas.html  detalhar_usuarios.html  listar_empresas.html  listar_usuarios.html  painel_admin.html
templates/empresa/: cadastrar.html  confirm_delete.html  detalhar_vaga_empresa.html  detalhe.html  form.html  listar.html  listar_vagas_empresa.html  painel_empresa.html  perfil_empresa.html  perrfil_candidato  ver_perfil_candidato.html
templates/usuarios/: cadastar.html  cadastrar.html  candidaturas.html  editar_usuario.html  login.html  painel_candidato.html  perfil_usuario.html
templates/vagas/: criar.html  datalhar.html  detalhar.html  editar.html  listar.html
usuarios/: admin.py  backends.py  forms.py  models.py  urls.py  views.py
usuarios/migrations/: 0001_initial.py  0002_usuarioadaptado_is_empresa.py  0003_rename_linkportfolio_usuarioadaptado_link_portfolio_and_more.py  0004_usuarioadaptado_is_candidato_and_more.py  0005_alter_usuarioadaptado_is_candidato.py  (+1 more)
vagas/: admin.py  form.py  models.py  urls.py  views.py
(+8 files in other folders)
