[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "First_job"
version = "0.1.0"
description = "Projeto para atividade com o toml"
authors = [
    { name = "Ana Kevylly", email = "anakevyllycavalcantec@gmail.com" },
    { name = "Francisco salesvanio", email = "jrrmatias123@gmail.com" }
]
# readme = "README.md"
requires-python = ">=3.0"

dependencies = [
    "asgiref==3.9.2",
    "django==5.2.6",
    "pillow==11.3.0",
    "sqlparse==0.5.3",
    "tzdata==2025.2"
]

[project.urls]
Homepage = "https://github.com/ana-kevy/First_job"
Repository = "https://github.com/ana-kevy/First_job"
"Bug Tracker" = "https://github.com/ana-kevy/First_job/issues"

[project.optional-dependencies]
dev = [
    "black==24.3.0",   
    "flake8==7.0.0",     
    "isort==5.13.2",    
    "pytest==8.2.0",     
    "pytest-django==4.8.0"
]
test = [
    "pytest==8.3.5",
    "pytest-django==4.8.0",
    "coverage==7.5.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*"]


[tool.black]
line-length = 100
target-version = ["py310"]

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "core.settings"
python_files = ["tests.py", "test_*.py"]